Caramelo Fonts - Cambios de nombre en inicio

--- a/css/theme-default.css
+++ b/css/theme-default.css
@@ -96,7 +96,7 @@ div.hz-divider.x-large {
   padding: 1px;
   overflow: hidden;
   height: 100%;
-  background-image: url(../img/fullhd-bg-1.jpg);
+  background-image: url(../img/2.jpg);
   -moz-background-size: cover;
   -o-background-size: cover;
   -webkit-background-size: cover;
