--- a/assets/css/theme-default.css
+++ b/assets/css/theme-default.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Courgette|Shadows+Into+Light');
 html,
 body {
   height: 100%;
@@ -42,7 +43,7 @@ h6 {
 }
 ::-webkit-scrollbar-thumb:vertical:hover,
 ::-webkit-scrollbar-thumb:horizontal:hover {
-  background: #96d7a0;
+  background: #3C9B99;
 }
 ::-webkit-scrollbar-thumb:horizontal {
   background-color: rgba(0, 0, 0, 0.2);
@@ -81,7 +82,7 @@ div.hz-divider.x-large {
   line-height: 50px;
   z-index: 15;
   color: #ffffff;
-  background-color: #96d7a0;
+  background-color: #3C9B99;
   text-align: center;
   font-size: 2.5em;
 }
@@ -90,7 +91,7 @@ div.hz-divider.x-large {
 }
 /*#region Home Screen */
 .home-screen {
-  background-color: #96d7a0;
+  background-color: #3C9B99;
   text-align: center;
   position: relative;
   padding: 1px;
@@ -347,7 +348,7 @@ div.hz-divider.x-large {
   bottom: 10%;
   position: absolute;
   width: 100%;
-  padding: 40px 5%;
+  padding: 30px 5%;
   /*z-index: 10;*/
 
 }
@@ -357,6 +358,7 @@ div.hz-divider.x-large {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  font-family: 'Shadows Into Light', cursive;
 }
 .home-screen .brand-text-slider > * {
   display: inline-block;
@@ -365,12 +367,13 @@ div.hz-divider.x-large {
 .home-screen .brand-text-slider h2 {
   margin: 0;
   padding: 5px;
-  font-size: 80px;
-  font-family: 'Roboto', sans-serif;
+  font-size: 100px;
+  font-family: 'Shadows Into Light', cursive;
   font-weight: 300;
   color: #ffffff;
   overflow-wrap: normal;
   text-wrap: none;
+  letter-spacing: 5px;
 }
 @media (max-width: 1200px) {
   .home-screen .brand-text-slider h2 {
@@ -635,7 +638,7 @@ div.hz-divider.x-large {
   margin-right: 5px;
 }
 .btn.btn-brand {
-  background-color: #96d7a0;
+  background-color: #3C9B99;
   -moz-transition-duration: 0.2s;
   -o-transition-duration: 0.2s;
   -webkit-transition-duration: 0.2s;
@@ -654,7 +657,7 @@ div.hz-divider.x-large {
   padding: 12px 18px;
 }
 .theme-color {
-  color: #96d7a0;
+  color: #3C9B99;
 }
 /*#endregion */
 /*#region Navigation */
@@ -683,7 +686,7 @@ div.hz-divider.x-large {
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  background-color: #96d7a0;
+  background-color: #3C9B99;
   color: #ffffff;
 }
 .navbar-default .navbar-nav > .active > a > i,
@@ -719,7 +722,7 @@ div.hz-divider.x-large {
   color: rgba(150, 215, 160, 0.05);
 }
 .service-item .service-title {
-  color: #96d7a0;
+  color: #3C9B99;
   font-size: 4em;
   padding-bottom: 20px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
@@ -729,12 +732,16 @@ div.hz-divider.x-large {
   font-size: 2em;
 }
 .service-item .service-icon {
-  color: #96d7a0;
+  color: #3C9B99;
   display: inline-block;
   font-size: 25em;
 }
 .service-item .service-content {
   padding-top: 80px;
+}
+.service-item .service-img {
+  width: 280px;
+  margin: 0 auto;
 }
 @media (max-width: 1200px) {
   .service-item .service-content {
@@ -798,7 +805,7 @@ div.hz-divider.x-large {
 /*#endregion */
 /*#region Pricing */
 .pricing {
-  background-color: #96d7a0;
+  background-color: #3C9B99;
   padding: 100px 0;
   position: relative;
   overflow: hidden;
@@ -835,7 +842,7 @@ div.hz-divider.x-large {
 }
 .pricing .pricing-table-item .pricing-table-price {
   padding: 30px;
-  color: #96d7a0;
+  color: #3C9B99;
   font-weight: 400;
 }
 .pricing .pricing-table-item .pricing-table-price .price-large {
@@ -873,7 +880,7 @@ div.hz-divider.x-large {
 }
 .pricing .pricing-table-item.featured-plan:after {
   content: attr(data-featured-text);
-  background-color: #96d7a0;
+  background-color: #3C9B99;
   display: inline-block;
   padding: 5px 15px;
   width: 150px;
@@ -892,11 +899,11 @@ div.hz-divider.x-large {
   color: #ffffff;
 }
 .pricing .pricing-table-item.featured-plan .pricing-table-price .price-large {
-  background-color: #96d7a0;
+  background-color: #3C9B99;
   border: 1px solid #8fd499;
 }
 .pricing .pricing-table-item.featured-plan .pricing-table-price .price-large .price-small {
-  background-color: #96d7a0;
+  background-color: #3C9B99;
   border: 1px solid #8fd499;
 }
 .pricing .pricing-table-item:hover .pricing-table-price {
@@ -970,7 +977,7 @@ div.hz-divider.x-large {
   background-color: #ffffff;
 }
 .portfolio .portfolio-filtering > ul > li > a.active {
-  background-color: #96d7a0;
+  background-color: #3C9B99;
   color: #ffffff;
 }
 .portfolio .portfolio-filtering > ul > li > a.active:hover {
@@ -1006,7 +1013,7 @@ div.hz-divider.x-large {
   left: 5px;
   right: 5px;
   bottom: 5px;
-  background-color: #96d7a0;
+  background-color: #3C9B99;
   background-color: rgba(150, 215, 160, 0.8);
   -moz-transition-duration: 0.4s;
   -o-transition-duration: 0.4s;
@@ -1018,7 +1025,7 @@ div.hz-divider.x-large {
   -webkit-transform: rotateY(90deg);
   transform: rotateY(90deg);
   opacity: 0;
-  border: 1px solid #96d7a0;
+  border: 1px solid #3C9B99;
   letter-spacing: 0;
 }
 .no-opacity .portfolio-container .portfolio-item .overlay {
@@ -1092,7 +1099,7 @@ div.hz-divider.x-large {
 /*#endregion */
 /*#region Features */
 .features {
-  background-color: #96d7a0;
+  background-color: #3C9B99;
   padding: 100px 0;
   color: #ffffff;
   position: relative;
@@ -1362,7 +1369,7 @@ div.hz-divider.x-large {
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
 }
 .map-holder .map-overlay {
-  background-color: #96d7a0;
+  background-color: #3C9B99;
   padding: 80px 0 100px 0;
   text-align: center;
   color: white;
